# jelnyelvpy

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Jelnyelv.spec  Makefile  PACKAGING.md  README.md  ertekelesi_jelentes.txt  pyproject.toml  requirements.lock.txt  szavak.txt
.github/workflows/: build.yml
docs/: mediapipe_jellemzok.md
scripts/: bootstrap_mac.sh  build_pyinstaller.ps1  build_pyinstaller.sh  download_mediapipe_models.py  run_dev.ps1  run_dev.sh
src/jelnyelv/: __init__.py  config.py  dataset.py  infer.py  main.py  model.py  mp_features.py  overlay.py  streaming.py  train.py  video_import.py
tests/: __init__.py  test_placeholder.py
